--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,42 @@
-asgiref==3.7.2
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-blinker==1.7.0
-Brlapi==0.8.5
-Brotli==1.1.0
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.4
+attrs==25.3.0
+babel==2.17.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
 colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-cryptography==41.0.7
-cupshelpers==1.0
-dbus-python==1.3.2
-defer==1.0.6
-distro==1.9.0
-distro-info==1.7+build1
-Flask==3.0.2
-gyp==0.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httplib2==0.20.4
-hyperframe==6.0.0
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-kaitaistruct==0.10
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-ldap3==2.9.1
-louis==3.29.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mitmproxy==8.1.1
-msgpack==1.0.3
-netaddr==0.8.0
-netifaces==0.11.0
-oauthlib==3.2.2
-olefile==0.46
-passlib==1.7.4
-pexpect==4.9.0
-pillow==10.2.0
-protobuf==4.21.12
-ptyprocess==0.7.0
-publicsuffix2==2.20191221
-pyasn1==0.4.8
-pyasyncore==1.0.2
-pycairo==1.25.1
-pycups==2.0.1
-Pygments==2.17.2
-PyGObject==3.48.2
-pyinotify==0.9.6
-PyJWT==2.7.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyperclip==1.8.2
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.8
-setuptools==68.1.2
-simplejson==3.19.2
-six==1.16.0
-sortedcontainers==2.4.0
-systemd-python==235
-tornado==6.4
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-urwid==2.6.10
-wadllib==1.3.6
-wcwidth==0.2.5
-Werkzeug==3.0.1
-wheel==0.42.0
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-zstandard==0.22.0
+csvw==3.5.1
+dlinfo==2.0.0
+filelock==3.18.0
+fsspec==2025.7.0
+hf-xet==1.1.5
+huggingface-hub==0.33.4
+idna==3.10
+isodate==0.7.2
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+language-tags==1.2.0
+numpy==2.3.1
+packaging==25.0
+pandas==2.3.1
+phonemizer==3.3.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+rdflib==7.1.4
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+rfc3986==1.5.0
+rpds-py==0.26.0
+safetensors==0.5.3
+segments==2.3.0
+six==1.17.0
+telephone==0.0.5
+tokenizers==0.21.2
+tqdm==4.67.1
+transformers==4.53.3
+typing_extensions==4.14.1
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
